# sierac-tm

./: .gitignore
.cursor/: README.md  hooks.json
.cursor/hook/: README.md  cursor_hook.py  hook_config.json
.cursor/rules/: SKILL.md  sierac_architecture.mdc  sierac_core.mdc  sierac_database.mdc  sierac_development.mdc  sierac_principles.mdc  (+2 more)
.kiro/: README.md  WORKTREE_ASSIGNMENTS.md
3d/: gltf_decoded_names.txt  gltf_inspect_result.txt  talktoai.md
cursor-admin/: .dockerignore  .env.example  DEPLOY.md  README.md  bootstrap-remote.sh  build-collector.sh  cleanup-remote.sh  configure-cursor-api.sh  deploy.sh  docker-compose.yml  setup-ssh-keys.sh  verify-service.sh
cursor-admin/collector/: Dockerfile  ai_code_sync.py  alerts.py  config.py  contribution_engine.py  cursor_api.py  database.py  git_collector.py  github_client.py  gitlab_client.py  main.py  pyproject.toml  sync.py
cursor-admin/collector/hook_templates/: cursor_hook.py  hook_config.json.tmpl  hooks.json
cursor-admin/collector/tests/: conftest.py
cursor-admin/collector/tests/unit/: test_alerts.py  test_api.py  test_contribution_engine.py  test_sync.py
docs/: 3D_MODEL_REQUEST.md  ARCHITECTURE.md  CURSOR-API-SETUP.md  DIGITAL_TWIN_PLAN.md  GITHUB-SSH-SETUP.md  SIERAC-TM-ONBOARDING.md
owlspec/: COMPETITIVE_WATCH.md  METHODOLOGY.md  PRODUCT_ANALYSIS.md  PRODUCT_DECISIONS.md  README.md  TEMPLATE_REPO_DESIGN.md  TWO_PHASE_MODEL.md  现场调研.xlsx  设备生产管理表单.xlsx
sierac-twin/: README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+162 files in other folders)
