[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cursor-admin-collector"
version = "0.1.0"
description = "Cursor Admin 采集服务：用量同步、会话上报、告警"
authors = ["Sierac-tm"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.111.0"
uvicorn = { extras = ["standard"], version = ">=0.29.0" }
asyncpg = ">=0.29.0"
httpx = ">=0.27.0"
apscheduler = ">=3.10.4"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.3.0"
python-dotenv = ">=1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.4.0"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["."]
exclude = [".venv", "tests"]

[tool.ruff.format]
# line-length inherited from [tool.ruff]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
